logs fix